# class-resolver

./: pyproject.toml
src/keneth/class_resolver/: __init__.py  class_resolver.py
